--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
 		}
 	],
 	"require": {
-		"php": ">=5.3.0",
-		"slim/slim": "2.*"
+		"php": ">=5.3.0"
 	},
 	"autoload": {
 		"psr-0": { "Slim\\Extras": "." }
